// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showAppearanceOptions 1`] = `
Array [
  Object {
    "cancelButtonIndex": 3,
    "containerStyle": Object {
      "backgroundColor": "#F5F5F5",
    },
    "options": Array [
      "System default",
      "Dark",
      "Light",
      "Cancel",
    ],
    "textStyle": Object {
      "color": "rgba(0,0,0,0.87)",
    },
    "title": "Actions",
    "titleTextStyle": Object {
      "color": "rgba(0,0,0,0.54)",
    },
  },
  [Function],
]
`;

exports[`showAvatarOptions 1`] = `
Array [
  Object {
    "cancelButtonIndex": 3,
    "containerStyle": Object {
      "backgroundColor": "#F5F5F5",
    },
    "icons": Array [
      <_default
        color="rgba(0,0,0,0.87)"
        name="camera-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="trash-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="eye-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="close-outline"
        size={24}
      />,
    ],
    "options": Array [
      "Update picture",
      "Delete picture",
      "Show picture",
      "Cancel",
    ],
    "textStyle": Object {
      "color": "rgba(0,0,0,0.87)",
    },
    "title": "Actions",
    "titleTextStyle": Object {
      "color": "rgba(0,0,0,0.54)",
    },
  },
  [Function],
]
`;

exports[`showFeedPostsOptions 1`] = `
Array [
  Object {
    "cancelButtonIndex": 3,
    "containerStyle": Object {
      "backgroundColor": "#F5F5F5",
    },
    "destructiveButtonIndex": 2,
    "icons": Array [
      <_default
        color="rgba(0,0,0,0.87)"
        name="eye-off-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="flag-outline"
        size={24}
      />,
      <_default
        color="rgba(255, 45, 85, 255)"
        name="remove-circle-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="md-close"
        size={24}
      />,
    ],
    "options": Array [
      "Hide this post",
      "Report this post",
      "Block Bruno",
      "Cancel",
    ],
    "textStyle": Object {
      "color": "rgba(0,0,0,0.87)",
    },
    "title": "Actions",
    "titleTextStyle": Object {
      "color": "rgba(0,0,0,0.54)",
    },
  },
  [Function],
]
`;

exports[`showManagePostsOptions 1`] = `
Array [
  Object {
    "cancelButtonIndex": 2,
    "containerStyle": Object {
      "backgroundColor": "#F5F5F5",
    },
    "destructiveButtonIndex": 1,
    "icons": Array [
      <_default
        color="rgba(0,0,0,0.87)"
        name="md-create"
        size={24}
      />,
      <_default
        color="rgba(255, 45, 85, 255)"
        name="ios-trash"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="md-close"
        size={24}
      />,
    ],
    "options": Array [
      "Edit post",
      "Delete post",
      "Cancel",
    ],
    "textStyle": Object {
      "color": "rgba(0,0,0,0.87)",
    },
    "title": "Actions",
    "titleTextStyle": Object {
      "color": "rgba(0,0,0,0.54)",
    },
  },
  [Function],
]
`;

exports[`showSharePostOptions 1`] = `
Array [
  Object {
    "cancelButtonIndex": 2,
    "containerStyle": Object {
      "backgroundColor": "#F5F5F5",
    },
    "icons": Array [
      <_default
        color="rgba(0,0,0,0.87)"
        name="git-compare-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="create-outline"
        size={24}
      />,
      <_default
        color="rgba(0,0,0,0.87)"
        name="close-outline"
        size={24}
      />,
    ],
    "options": Array [
      "Share now",
      "Edit and share",
      "Cancel",
    ],
    "textStyle": Object {
      "color": "rgba(0,0,0,0.87)",
    },
    "title": "Share",
    "titleTextStyle": Object {
      "color": "rgba(0,0,0,0.54)",
    },
  },
  [Function],
]
`;
